--- a/AD!/index.html
+++ b/AD!/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title></title>
 </head>
 <body>
     <!--esse é a minha barra-->
-    <header>
-        <img src="imagens/ResfGlobLogoDeitado.png" alt="Logo">
-        <hr>
-        <ul>
-            <li><address></address></li>
-            <li><address></address></li>
-            <li><address><a href=""></a></address></li>
+    <header class="container">
+        <div alt="Logo"><img class="logo" src="imagens/ResfGlobLogoDeitado.png" ></div>
+        <ul class="container-menu">
+            <li class="bloco-1"><address>Av. Novaya Zemlya, 1870</address></li>
+            <li class="bloco-1"><address>Cel: (21) 98765-4321</address></li>
+            <li class="bloco-1"><address><a href="#">contato@refriglob.com.br</a></address></li>
         </ul>
+        <hr>
 
 
     </header>
