--- a/AD!/index.html
+++ b/AD!/index.html
@@ -9,17 +9,43 @@
 </head>
 <body>
     <!--esse é a minha barra-->
-    <header class="container">
-        <div alt="Logo"><img class="logo" src="imagens/ResfGlobLogoDeitado.png" ></div>
-        <ul class="container-menu">
-            <li class="bloco-1"><address>Av. Novaya Zemlya, 1870</address></li>
-            <li class="bloco-1"><address>Cel: (21) 98765-4321</address></li>
-            <li class="bloco-1"><address><a href="#">contato@refriglob.com.br</a></address></li>
-        </ul>
-        <hr>
-
-
+    <header>
+        <nav class="container-menu">
+            <img class="logo" src="imagens/ResfGlobLogoDeitado.png" >
+                <ul>
+                    <li class="bloco-1"><address>Av. Novaya Zemlya, 1870</address></li>
+                    <li class="bloco-1"><address>Cel: (21) 98765-4321</address></li>
+                    <li class="bloco-1"><address><a href="#" target="_blank" rel="external">contato@refriglob.com.br</a></address></li>
+                </ul>
+        </nav>
     </header>
+    <!--FIm do meu cabeçalho-->
+
+    <main>
+        <section class="container-conteudo">
+            <ul class="bloco-2">
+                <li ><a href="#" class="link-conteudo">Apresentação</a></li>
+                <li "><a href="#" class="link-conteudo">Tipos</a></li>
+                <li ><a href="#" class="link-conteudo">Estoque</a></li>
+                <li ><a href="#" class="link-conteudo">Cadastro</a></li>
+                <li ><a href="#" class="link-conteudo">Compras</a></li>
+            </ul>
+
+            <div>
+                <h1 class="bloco-3">Pare de sentir calor!</h1> 
+                <h1>Sinta o clima da idade do gelo aderindo ao</h1>
+                <img src="imagens/ResfGlobLogo.png" alt="Logo">
+                <h1> Encontre aqui o ar-condicionado</h1>
+                <h1 class="bloco-3">ideal para sua casa.</h1>
+            </div>
+
+        </section>
+
+
+
+
+
+    </main>
     
 </body>
 </html>
